removed minor link.

--- a/popup.html
+++ b/popup.html
@@ -212,7 +212,7 @@
     <p class="title">Did we miss a post?</p>
     <ul class="listgroup report-group">
       <li class="listgroupitem">
-        <a title="Click here to go to the report page!" href="https://forms.gle/ir3prKiZYWM31FD2A" id="report">
+        <a title="Click here to go to the report page!" href="#" id="report">
           <text class="maintext report-text">Click here to report it!</text>
         </a>
       </li>
